adding better cover

--- a/_posts/2020-07-02-relnotes0_12.md
+++ b/_posts/2020-07-02-relnotes0_12.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "QDK 0.12 Release Note Highlights"
-image: /public/media/blog/2020-07-02-cover.png
+image: /public/media/blog/2020-07-02-cover2.png
 excerpt: "So many new exciting features this month! Let's dive into them and see how they work."
 ---
 
@@ -107,7 +107,7 @@ The new names here make it much more clear what the operations are actually doin
 
 > Removed deprecated Microsoft.Quantum.Primitive.* namespace
 
-I think tht finally clearing out that namespace will be good for clarity and also help make the language more inclusive.
+I think that finally clearing out that namespace will be good for clarity and also help make the language more inclusive.
 It was originally deprecated in [version 0.6](https://docs.microsoft.com/quantum/resources/relnotes#version-061905) and renamed to the more descriptive [**Microsoft.Quantum.Intrinsic** namespace](https://docs.microsoft.com/qsharp/api/qsharp/microsoft.quantum.intrinsic).
 
 ## Time to go update some code!
