adding reveal support

--- a/events/2017-ndnc.md
+++ b/events/2017-ndnc.md
@@ -3,10 +3,11 @@ title: Spontaneous Superradiance from Single Diamond Nanocrystals
 subtitle:
 event: "11th International Conference on New Diamond and Nano Carbons – NDNC 2017"
 eventUrl: "https://www.sciencedirect.com/journal/diamond-and-related-materials/special-issue/10RX8NC3SNS"
-eventAsset: ../../public/download/kaiser-NDNC17-abstract.pdf
+eventAsset: kaiser-NDNC17-abstract.pdf
 location: "Cairns, QLD, Australia"
 video: 
-slides: 
+slides:
+  reveal: NDNC_2017
 code:
 date: 2017-05-29T14:10:00+10:00
 abstract: |
